--- a/index.html
+++ b/index.html
@@ -94,144 +94,144 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\nike.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\original-3ec323de1ef0b1e596a2a0a546802050.png" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\original-3ec323de1ef0b1e596a2a0a546802050.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\nike.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\original-3298272db9c7b768b8a8dd0a1efda26e.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\original-3298272db9c7b768b8a8dd0a1efda26e.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\original-3ec323de1ef0b1e596a2a0a546802050.png" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\original-3ec323de1ef0b1e596a2a0a546802050.png" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\nike.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\nike.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\nike.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\nike.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\admin dashboard\original-2bed446aa4d28daf822c712b245f3622.png" class="img-fluid" alt="">
+              <img src="assets\img\gallery\admin dashboard\original-2bed446aa4d28daf822c712b245f3622.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\admin dashboard\original-2bed446aa4d28daf822c712b245f3622.png" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\admin dashboard\original-2bed446aa4d28daf822c712b245f3622.png" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" class="img-fluid" alt="">
+              <img src="assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" class="img-fluid" alt="">
+              <img src="assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\admin dashboard\original-05cb843d197230e5013f20db89551b07.png" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\6dd66dbd98e676605645970f18b5d430.png" class="img-fluid" alt="">
+              <img src=assets\img\gallery\ecommerce\6dd66dbd98e676605645970f18b5d430.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\6dd66dbd98e676605645970f18b5d430.png" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\6dd66dbd98e676605645970f18b5d430.png" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\34041b678f8322dd95446ca0e0ee3d4caebb59008a7aa3f8922a8461c268fe6d1617888011678.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\34041b678f8322dd95446ca0e0ee3d4caebb59008a7aa3f8922a8461c268fe6d1617888011678.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\34041b678f8322dd95446ca0e0ee3d4caebb59008a7aa3f8922a8461c268fe6d1617888011678.jpg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\34041b678f8322dd95446ca0e0ee3d4caebb59008a7aa3f8922a8461c268fe6d1617888011678.jpg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\c4b12722f50791fe162dd5a27afa217ced8d5bd6b10d8d1c80e5ad0490eff63f1622375935018.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\c4b12722f50791fe162dd5a27afa217ced8d5bd6b10d8d1c80e5ad0490eff63f1622375935018.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\c4b12722f50791fe162dd5a27afa217ced8d5bd6b10d8d1c80e5ad0490eff63f1622375935018.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\c4b12722f50791fe162dd5a27afa217ced8d5bd6b10d8d1c80e5ad0490eff63f1622375935018.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\download (1).jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\download (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\download (1).jpg" title="Gallery 13" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\download (1).jpg" title="Gallery 13" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\download (1).jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\download (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\download (1).jpg" title="Gallery 14" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\download (1).jpg" title="Gallery 14" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\download (2).jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\download (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\download (2).jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\download (2).jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\images.jpg" class="img-fluid" alt="">
+              <img src="assets\img\gallery\ecommerce\images.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\images.jpg" title="Gallery 16" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets\img\gallery\ecommerce\images.jpg" title="Gallery 16" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
