--- a/gallery-single.html
+++ b/gallery-single.html
@@ -98,19 +98,19 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" alt="">
+                <img src="assets\img\gallery\ecommerce\85a04d67949e7305261d481c96c269f4.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\nike.jpg" alt="">
+                <img src="assets\img\gallery\ecommerce\nike.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\original-3ec323de1ef0b1e596a2a0a546802050.png" alt="">
+                <img src="assets\img\gallery\ecommerce\original-3ec323de1ef0b1e596a2a0a546802050.png" alt="">
               </div>
               <div class="swiper-slide">
                 <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\ecommerce\original-3298272db9c7b768b8a8dd0a1efda26e.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="C:\Users\AKSHAY\Desktop\nextProject\PhotoFolio\assets\img\gallery\Extraimages\Capture.PNG" alt="">
+                <img src="assets\img\gallery\Extraimages\Capture.PNG" alt="">
               </div>
               <div class="swiper-slide">
                 <img src="assets/img/gallery/admin dashboard/original-2bed446aa4d28daf822c712b245f3622.png" alt="">
