--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>nambiarakshayg@gmail.com</p>
+                <p>akshaykadukkankilmeethal@yahoo.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -119,7 +119,7 @@
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
                 <h4>Call:</h4>
-                <p>8304952375</p>
+                <p>8547549375</p>
               </div>
             </div>
           </div><!-- End Info Item -->
