--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>akshaykadukkankilmeethal@yahoo.com</p>
+                <p>akshaykadukkankilmeethal@yahoo.com&nbsp&nbsp</p>
               </div>
             </div>
           </div><!-- End Info Item -->
