--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
             </div>
           </div><!-- End Info Item -->
 
-          <div class="col-lg-3">
+          <div class="col-lg-3" tyle="margin-left: 20px;">
             <div class="info-item d-flex">
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
